--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,12 @@
-body {
-  width: 100%;
-  height: 100%;
-  display: grid;
-}
+@import url("https://fonts.googleapis.com/css2?family=Tac+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swa");
 
-.box {
-  max-width: 80%;
-  margin: auto;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+h1,
+button {
+  /* font-family: "Tac One", sans-serif; */
+  font-family: "Roboto Slab", serif;
 }
